# efuse-telemetry-generator

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
configs/: one_month.yaml  zone_controller_full.yaml
dashboard/: app.py
docs/: architecture.md  configuration.md  dashboard.md  data-model.md  domain-reference.md  drive-cycles.md  index.md  onboarding.md  quickstart.md  signal-chain-one-pager.md
docs/use-cases/: README.md  _template.md
docs/use-cases/0-ml-datasets/: README.md  anomaly-detection-pretraining.md  fault-classifier-training.md  pre-trip-sequence-prediction.md  synthetic-pretraining-real-finetuning.md  threshold-search-via-simulation.md
docs/use-cases/1-protection-design/: README.md  release-regression-gating.md  threshold-and-retry-calibration.md  variant-reuse-validation.md
docs/use-cases/2-diagnostics/: README.md  dtc-rule-engineering.md  workshop-fault-isolation.md
docs/use-cases/3-hardware-and-harness/: README.md  efuse-ic-benchmarking.md  thermal-headroom-validation.md  wiring-and-connector-sizing.md
docs/use-cases/4-vehicle-integration/: README.md  can-telemetry-fidelity.md  multi-channel-interaction.md  powernet-disturbance-resilience.md
docs/use-cases/5-compliance-and-safety/: README.md  pre-certification-screening.md  safety-coverage-mapping.md
docs/use-cases/6-field-and-fleet/: README.md  degradation-early-warning.md  field-driven-recalibration.md
efuse_datagen/: __init__.py  cli.py  dashboard_app.py  dashboard_launcher.py
efuse_datagen/config/: __init__.py  builtin.py  catalog.py  models.py  topology_io.py
efuse_datagen/config/templates/: README.md  custom_topology.yaml  custom_topology_with_catalog.yaml  fleet.yaml  multi_day.yaml  quick_demo.yaml  single_drive.yaml
efuse_datagen/config/topologies/: bev_2zone_12ch.yaml  bev_4zone_65ch.yaml
efuse_datagen/dashboard/: __init__.py  _shared.py
efuse_datagen/dashboard/tabs/: config.py  features.py  overview.py  protection.py  signals.py
efuse_datagen/features/: __init__.py  engine.py
efuse_datagen/ingestion/: __init__.py  measurement_adapter.py
efuse_datagen/schemas/: __init__.py  telemetry.py
efuse_datagen/simulation/: __init__.py  drive_cycles.py  fleet.py  generator.py
efuse_datagen/storage/: __init__.py  writer.py
efuse_datagen/utils/: __init__.py  logging.py
examples/: ingest_bench_recording.py  quickstart.py
tests/: conftest.py  test_adc_quantization.py  test_bus_voltage.py  test_can_quantization.py  test_catalog.py  test_cli_validation.py  test_config_validation.py  test_current_limiting.py  test_drive_cycles.py  test_feature_edge_cases.py  test_features.py  test_fleet_integration.py  test_generate_api.py  test_generator_basic.py  test_ground_faults.py  test_harness_aging.py  test_measurement_adapter.py  test_power_states.py  test_protection.py  test_simulation.py  test_storage.py  test_thermal_coupling.py  test_topology_io.py
vip_datagen/: cli.py  dashboard_app.py  dashboard_launcher.py
vip_datagen/config/: builtin.py  catalog.py  models.py
vip_datagen/features/: engine.py
vip_datagen/schemas/: telemetry.py
vip_datagen/simulation/: drive_cycles.py  generator.py
vip_datagen/storage/: writer.py
