[build-system]
requires = ["setuptools>=77.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vip-data-generator"
version = "0.1.0"
description = "Standalone synthetic eFuse telemetry generator — physics-based signal synthesis, feature extraction, and fault labelling for ZC architecture validation"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    {name = "VIP Data Generator Contributors"},
]
keywords = [
    "automotive",
    "efuse",
    "telemetry",
    "synthetic-data",
    "zone-controller",
    "battery-electric-vehicle",
    "fault-injection",
    "simulation",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "pydantic>=2.0",
    "pandas>=2.0",
    "numpy>=1.24",
    "pyarrow>=14.0",
    "pyyaml>=6.0",
    "typer>=0.9",
    "rich>=13.0",
]

# Replace these placeholder URLs with the final public repository paths before
# the first external release if you publish under a different org/user.
[project.urls]
Homepage = "https://github.com/your-org/vip-data-generator"
Documentation = "https://github.com/your-org/vip-data-generator/tree/main/docs"
Repository = "https://github.com/your-org/vip-data-generator"
Issues = "https://github.com/your-org/vip-data-generator/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "ruff",
]
dashboard = [
    "streamlit>=1.32",
    "plotly>=5.0",
]

[project.scripts]
vip-gen = "vip_datagen.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["vip_datagen*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
