[build-system]
requires = ["setuptools>=77.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "efuse-telemetry-generator"
version = "0.2.0"
description = "Standalone synthetic eFuse telemetry generator — physics-based signal synthesis, feature extraction, and fault labelling for ZC architecture validation"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    {name = "eFuse Telemetry Generator Contributors"},
]
keywords = [
    "automotive",
    "efuse",
    "telemetry",
    "synthetic-data",
    "zone-controller",
    "battery-electric-vehicle",
    "fault-injection",
    "simulation",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "pydantic>=2.0,<3",
    "pandas>=2.0,<3",
    "numpy>=1.24,<3",
    "pyarrow>=14.0,<19",
    "pyyaml>=6.0,<7",
    "typer>=0.9,<1",
    "rich>=13.0,<14",
]

[project.urls]
Homepage = "https://github.com/jayaprakash87/efuse-telemetry-generator"
Documentation = "https://github.com/jayaprakash87/efuse-telemetry-generator/tree/main/docs"
Repository = "https://github.com/jayaprakash87/efuse-telemetry-generator"
Issues = "https://github.com/jayaprakash87/efuse-telemetry-generator/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "ruff",
    "mypy",
    "types-PyYAML",
]
dashboard = [
    "streamlit>=1.32,<2",
    "plotly>=5.0,<6",
]

[project.scripts]
efuse-gen = "efuse_datagen.cli:main"
efuse-ingest = "efuse_datagen.cli:ingest_main"
efuse-dashboard = "efuse_datagen.dashboard_launcher:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["efuse_datagen*"]

[tool.setuptools.package-data]
efuse_datagen = ["config/templates/*.yaml", "py.typed"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.coverage.run]
source = ["efuse_datagen"]
omit = [
    "efuse_datagen/dashboard/*",
    "efuse_datagen/dashboard_app.py",
    "efuse_datagen/dashboard_launcher.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
]
